force-app/main/default/objects/blng__TaxTreatment__c/blng__TaxTreatment__c.object-meta.xml
<CustomObject>
    <label>Tax Treatment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Treatments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>