force-app/main/default/objects/blng__TaxTreatment__c/fields/blng__TaxIntegration__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxIntegration__c</fullName>
    <label>Tax Integration</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>blng__TaxIntegration__c.blng__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>blng__TaxIntegration__c</referenceTo>
    <relationshipLabel>Tax Treatments</relationshipLabel>
    <relationshipName>TaxTreatments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>